--- a/Probability_Statistics.ipynb
+++ b/Probability_Statistics.ipynb
@@ -8,14 +8,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 导入必要的包，multinomial用于产生服从多项分布的样本"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import torch\n",
-    "from torch.distributions import multinomial\n"
+    "from torch.distributions import multinomial\n",
+    "from d2l import torch as d2l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. 以掷骰子为例，构造一个概率向量，即各个实验结果出现的概率。  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m fair_probs \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mones((\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m6\u001b[39m)) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m6\u001b[39m\n\u001b[0;32m      2\u001b[0m counts \u001b[38;5;241m=\u001b[39m multinomial\u001b[38;5;241m.\u001b[39mMultinomial(\u001b[38;5;241m100\u001b[39m, fair_probs)\n\u001b[1;32m----> 3\u001b[0m samples \u001b[38;5;241m=\u001b[39m \u001b[43mcounts\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msample\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m500\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(samples)\n",
+      "File \u001b[1;32me:\\Deep_Learning\\.venv\\Lib\\site-packages\\torch\\distributions\\multinomial.py:99\u001b[0m, in \u001b[0;36mMultinomial.sample\u001b[1;34m(self, sample_shape)\u001b[0m\n\u001b[0;32m     98\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msample\u001b[39m(\u001b[38;5;28mself\u001b[39m, sample_shape\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mSize()):\n\u001b[1;32m---> 99\u001b[0m     sample_shape \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSize\u001b[49m\u001b[43m(\u001b[49m\u001b[43msample_shape\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    100\u001b[0m     samples \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_categorical\u001b[38;5;241m.\u001b[39msample(torch\u001b[38;5;241m.\u001b[39mSize((\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtotal_count,)) \u001b[38;5;241m+\u001b[39m sample_shape)\n\u001b[0;32m    101\u001b[0m     \u001b[38;5;66;03m# samples.shape is (total_count, sample_shape, batch_shape), need to change it to\u001b[39;00m\n\u001b[0;32m    102\u001b[0m     \u001b[38;5;66;03m# (sample_shape, batch_shape, total_count)\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "fair_probs = torch.ones((1, 6)) / 6\n",
+    "counts = multinomial.Multinomial(100, fair_probs)\n",
+    "samples = counts.sample(500)\n",
+    "print(samples)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. 我们也可以看到这些概率如何随着时间的推移收敛到真实概率。让我们进行500组实验，每组抽取10个样本。  \n",
+    "进行一次git revert操作。  "
    ]
   }
  ],
@@ -26,7 +74,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.8"
   }
  },
