添加第三行

--- a/Probability_Statistics.ipynb
+++ b/Probability_Statistics.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "source": [
     "3. 我们也可以看到这些概率如何随着时间的推移收敛到真实概率。让我们进行500组实验，每组抽取10个样本。  \n",
-    "进行一次git revert操作。  再添加一次。"
+    "进行一次git revert操作。  再添加一次。添加第三行。"
    ]
   }
  ],
