完善数学符号

--- a/Automatic_Differentiation.ipynb
+++ b/Automatic_Differentiation.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "作为一个演示例子，假设我们想对函数y = 2x⊤x关于列向量x求导。  "
+    "作为一个演示例子，假设我们想对函数$y=2\\bold{x}^\\top\\bold{x}$关于列向量$\\bold x$求导。  "
    ]
   },
   {
