补充PyTorch中的张量乘法知识点

--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -252,13 +252,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 运行A/A.sum(axis=1)，看看会发生什么。请分析一下原因？  \n",
-    "A.sum(axis=1)发生数据降维，不能利用广播机制，应采用A.sum(axis=1， keepdim=True)"
+    "- 运行A/A.sum(dim=1)，看看会发生什么。请分析一下原因？  \n",
+    "A.sum(dim=1)发生数据降维，且不满足广播机制条件，应采用A.sum(dim=1， keepdim=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,8 +284,99 @@
     "X = torch.arange(20, dtype=torch.float32).reshape(4, 5)\n",
     "print(X)\n",
     "X_sum_axis1 = X.sum(dim=1, keepdim=True)\n",
+    "#X_sum_axis1 = X.sum(dim=1)\n",
     "print(X_sum_axis1, X_sum_axis1.shape)\n",
     "print(X/X_sum_axis1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Pytorch中的张量乘法`torch.matmul()`详解  \n",
+    "    1. 如果是两个一维张量相乘，维度均为(N)，则进行向量点积，结果为标量，即$z=\\bold{xy}$。  \n",
+    "    2. 如果是二维张量(M, N)*一维张量(N)，则将一维张量**右侧升维**，即(N, 1)，然后进行矩阵运算得到矩阵维度为(M, 1)，再降维得到最终结果的维度为(M)。  \n",
+    "    3. 如果是一维张量(N)*二维张量(N, M)，则将一维张量**左侧升维**，即(1, N)，然后进行矩阵运算得到矩阵维度为(1, M)，再降维得到最终结果的维度为(M)。   \n",
+    "    4. 如果2,3中所描述的二维张量扩展到更高维度（如三维张量），一维张量升维准则不变，对于超过二维的维度进行广播，最终计算结果不进行降维。具体维度变化如下：  \n",
+    "    >以(K, M, N)*(N)为例  \n",
+    "    >$$\n",
+    "    >\\bold{(K, M, N)}\\times\\bold{(N)} \\\\\n",
+    "    >\\bold{(N)}\\rightarrow\\bold{(K, N, 1)} \\\\\n",
+    "    >\\bold{(K, M, N)}\\times\\bold{(N)}\\rightarrow\\bold{(K, M, N)}\\times\\bold{(K, N, 1)}=\\bold{(K, M, 1)}\n",
+    "    >$$  \n",
+    "\n",
+    "    >以(N)*(K, N, M)为例  \n",
+    "    >$$\n",
+    "    >\\bold{(N)}\\times\\bold{(K, N, M)} \\\\\n",
+    "    >\\bold{(N)}\\rightarrow\\bold{(K, 1, N)} \\\\\n",
+    "    >\\bold{(N)}\\times\\bold{(K, N, M)}\\rightarrow\\bold{(K, 1, N)}\\times\\bold{(K, N, M)}=\\bold{(K, 1, M)}\n",
+    "    >$$  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0., 1., 2.])\n",
+      "tensor([[[ 0.,  1.,  2.],\n",
+      "         [ 3.,  4.,  5.]],\n",
+      "\n",
+      "        [[ 6.,  7.,  8.],\n",
+      "         [ 9., 10., 11.]]])\n",
+      "tensor([[ 5., 14.],\n",
+      "        [23., 32.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.arange(3, dtype=torch.float32)\n",
+    "b = torch.arange(12, dtype=torch.float32).reshape(2, 2, 3)\n",
+    "c = torch.matmul(b, a)\n",
+    "# d = torch.matmul(b, a)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "# print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.9801, -0.9638, -0.1028,  0.0226],\n",
+      "        [ 0.1911,  1.6425, -1.1452, -0.8970],\n",
+      "        [ 1.2729, -1.8892, -0.1872, -1.4800]])\n",
+      "tensor([-0.5190,  0.6274, -0.1808, -0.0306])\n",
+      "tensor([-1.0954,  1.1657, -1.7667])\n",
+      "tensor([[0., 1., 2., 3.]])\n",
+      "tensor([[0.],\n",
+      "        [1.],\n",
+      "        [2.],\n",
+      "        [3.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensor1 = torch.randn(3, 4)\n",
+    "tensor2 = torch.randn(4)\n",
+    "tensor3 = torch.matmul(tensor1, tensor2)\n",
+    "tensor4 = torch.arange(4, dtype=torch.float32).reshape(1, 4)\n",
+    "tensor5 = torch.arange(4, dtype=torch.float32).reshape(4, 1)\n",
+    "print(tensor1)\n",
+    "print(tensor2)\n",
+    "print(tensor3)\n",
+    "print(tensor4)\n",
+    "print(tensor5)"
    ]
   }
  ],
