添加进行深度学习需要注意的几个要点

--- a/Linear_Regression_Implementation _from _Scratch.ipynb
+++ b/Linear_Regression_Implementation _from _Scratch.ipynb
@@ -1624,6 +1624,16 @@
     "print(e, e.shape)\n",
     "print(e - d, (e - d).shape)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. 要点  \n",
+    "- 时刻关注关键变量：features, labels, 小批量fetaures, 小批量labels, 预测labels的维度。  \n",
+    "- 关注几个超参数：学习率，batchsize，迭代周期epoch。\n",
+    "- 关注三个模块：模型，损失函数，优化算法，确定这三个模块才能对模型进行训练。"
+   ]
   }
  ],
  "metadata": {
