添加两个自动微分的关键方法及其意义

--- a/Automatic_Differentiation.ipynb
+++ b/Automatic_Differentiation.ipynb
@@ -298,7 +298,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 解释`y.backward()`的用法:  \n",
+    "- 两个自动微分的关键方法及其意义  \n",
+    "`torch.Tensor.requires_grad_(requires_grad=Ture)`的作用：记录当前tensor的操作，即构建计算图。  \n",
+    "`torch.Tensor.backward()`的作用：反向传播，计算梯度。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- `torch.Tensor.backward()`的用法:  \n",
     "    ```Python\n",
     "    (method) def backward(\n",
     "        gradient: Any | None = None,\n",
@@ -308,12 +317,12 @@
     "    ) -> (Any | None)\n",
     "    ```  \n",
     "    \n",
-    "    `gradient`:用于将向量或矩阵y转换成标量的向量或矩阵。举一个例子： \n",
+    "    `gradient`:用于将非标量Tensor转换成标量的Tensor。举一个例子： \n",
     "    \n",
     "    ![gradient的详细解释](picture\\grad.jpg)  \n",
     "\n",
     "    \n",
-    "    `retain_graph`:通常在调用一次backward后，pytorch会自动把计算图销毁，所以要想对某个变量重复调用backward，则需要将该参数设置为True。"
+    "    `retain_graph`：通常在调用一次backward后，**pytorch会自动把计算图销毁**，所以要想对某个变量重复调用backward，则需要将该参数设置为True。"
    ]
   }
  ],
