补充torch.utils.data.DataLoader()函数解释

--- a/Concise_Implementation_of_Linear_Regression.ipynb
+++ b/Concise_Implementation_of_Linear_Regression.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -45,14 +45,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. 构造小批量样本生产函数"
+    "### 2. 构造小批量样本生产函数  \n",
+    "`torch.utils.data.DataLoader()`函数详解：这里主要介绍自动批次加载数据，关注三个点：输出顺序，一个批次的大小，以何种形式输出批次。  \n",
+    ">```Python\n",
+    ">torch.utils.data.DataLoader(dataset, batch_size=1, shuffle=None, sampler=None, batch_sampler=None, num_workers=0,  \n",
+    ">                            collate_fn=None, pin_memory=False, drop_last=False, timeout=0, worker_init_fn=None,  \n",
+    ">                            multiprocessing_context=None, generator=None, *, prefetch_factor=None, persistent_workers=False,  \n",
+    ">                            pin_memory_device='', in_order=True)  \n",
+    ">Parameters  \n",
+    ">   *  dataset(Dataset) - Map-style datasets or Iterable-style datasets\n",
+    ">   *  batch_size(int, optional) - 一个batch的样本数\n",
+    ">   *  shuffle(bool, optional) - 随机打乱datasets的样本输出顺序\n",
+    ">   *  sampler(Sampler or Iterable, optional) - 定义dataset的样本输出顺序，每次输出一个样本，不能用shuffle同时使用\n",
+    ">   *  batch_sampler(Sampler or Iterable, optional)  - 定义dataset的样本输出顺序和batch_size，不能用batch_size、shuffle、sampler同时使用\n",
+    ">   *  collate_fn(Callable, optional)  - 一个定义如何打包输出样本的函数，有默认值  \n",
+    ">```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor([[-0.0864, -0.3470],\n",
+      "        [-0.4102, -0.4229],\n",
+      "        [ 1.1013, -0.7217],\n",
+      "        [-0.3959, -0.8336],\n",
+      "        [ 0.0923, -0.3248],\n",
+      "        [-1.4870, -0.8908],\n",
+      "        [ 0.4897,  0.0634],\n",
+      "        [-0.5066, -0.3753],\n",
+      "        [-0.2499, -0.9528],\n",
+      "        [ 0.0209, -0.6818]]), tensor([[5.2185],\n",
+      "        [4.8035],\n",
+      "        [8.8540],\n",
+      "        [6.2350],\n",
+      "        [5.4861],\n",
+      "        [4.2617],\n",
+      "        [4.9746],\n",
+      "        [4.4595],\n",
+      "        [6.9510],\n",
+      "        [6.5486]])]\n"
+     ]
+    }
+   ],
    "source": [
     "def load_array(data_arrays, batch_size, is_train=True):\n",
     "    \"\"\"构造一个PyTorch数据迭代器\"\"\"\n",
@@ -60,7 +100,8 @@
     "    return data.DataLoader(dataset, batch_size, shuffle=is_train)\n",
     "\n",
     "batch_size = 10\n",
-    "data_iter = load_array((features, labels), batch_size)"
+    "data_iter = load_array((features, labels), batch_size)\n",
+    "print(next(iter(data_iter)))"
    ]
   },
   {
@@ -86,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
