torch.utils.data.DataLoader()数据集参数详解

--- a/Concise_Implementation_of_Linear_Regression.ipynb
+++ b/Concise_Implementation_of_Linear_Regression.ipynb
@@ -53,7 +53,8 @@
     ">                            multiprocessing_context=None, generator=None, *, prefetch_factor=None, persistent_workers=False,  \n",
     ">                            pin_memory_device='', in_order=True)  \n",
     ">Parameters  \n",
-    ">   *  dataset(Dataset) - Map-style datasets or Iterable-style datasets\n",
+    ">   \n",
+    ">   *  dataset(Dataset) - Map-style datasets or Iterable-style datasets.A map-style dataset is one that implements the __getitem__() and __len__() protocols, and represents a map from (possibly non-integral) indices/keys to data samples. An iterable-style dataset is an instance of a subclass of IterableDataset that implements the __iter__() protocol, and represents an iterable over data samples.  \n",
     ">   *  batch_size(int, optional) - 一个batch的样本数\n",
     ">   *  shuffle(bool, optional) - 随机打乱datasets的样本输出顺序\n",
     ">   *  sampler(Sampler or Iterable, optional) - 定义dataset的样本输出顺序，每次输出一个样本，不能用shuffle同时使用\n",
