AlexNet进行了数据增强

--- a/AlexNet.ipynb
+++ b/AlexNet.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "1. AlexNet比相对较小的LeNet5要深得多。 AlexNet由八层组成：五个卷积层、两个全连接隐藏层和一个全连接输出层。  \n",
     "2. AlexNet使用ReLU而不是sigmoid作为其激活函数。一方面， ReLU激活函数的计算更简单，它不需要如sigmoid激活函数那般复杂的求幂运算。另一方面，当使用不同的参数初始化方法时， ReLU激活函数使训练模型更加容易。当sigmoid激活函数的输出非常接近于0或1时，这些区域的梯度几乎为0，因此反向传播无法继续更新一些模型参数。相反， ReLU激活函数在正区间的梯度总是1。因此，如果模型参数没有正确初始化， sigmoid函数可能在正区间内得到几乎为0的梯度，从而使模型无法得到有效的训练。  \n",
-    "3. 容量控制和预处理。AlexNet通过暂退法（4.6节）控制全连接层的模型复杂度，而LeNet只使用了权重衰减。为了进一步扩充数据， AlexNet在训练时增加了大量的图像增强数据，如翻转、裁切和变色。这使得模型更健壮，更大的样本量有效地减少了过拟合。  "
+    "3. 容量控制和预处理。AlexNet通过暂退法（4.6节）控制全连接层的模型复杂度，而LeNet只使用了权重衰减。为了进一步扩充数据， AlexNet在训练时增加了大量的**图像增强数据**，如翻转、裁切和变色。这使得模型更健壮，更大的样本量有效地减少了过拟合。  "
    ]
   },
   {
