修改tensor.matmul()用法

--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -297,19 +297,19 @@
     "    1. 如果是两个一维张量相乘，维度均为(N)，则进行向量点积，结果为标量，即$z=\\bold{xy}$。  \n",
     "    2. 如果是二维张量(M, N)*一维张量(N)，则将一维张量**右侧升维**，即(N, 1)，然后进行矩阵运算得到矩阵维度为(M, 1)，再降维得到最终结果的维度为(M)。  \n",
     "    3. 如果是一维张量(N)*二维张量(N, M)，则将一维张量**左侧升维**，即(1, N)，然后进行矩阵运算得到矩阵维度为(1, M)，再降维得到最终结果的维度为(M)。   \n",
-    "    4. 如果2,3中所描述的二维张量扩展到更高维度（如三维张量），一维张量升维准则不变，对于超过二维的维度进行广播，最终计算结果不进行降维。具体维度变化如下：  \n",
+    "    4. 如果2,3中所描述的二维张量扩展到更高维度（如三维张量），一维张量升维和降维准则不变，对于超过二维的维度进行广播。具体维度变化如下：  \n",
     "    >以(K, M, N)*(N)为例  \n",
     "    >$$\n",
     "    >\\bold{(K, M, N)}\\times\\bold{(N)} \\\\\n",
     "    >\\bold{(N)}\\rightarrow\\bold{(K, N, 1)} \\\\\n",
-    "    >\\bold{(K, M, N)}\\times\\bold{(N)}\\rightarrow\\bold{(K, M, N)}\\times\\bold{(K, N, 1)}=\\bold{(K, M, 1)}\n",
+    "    >\\bold{(K, M, N)}\\times\\bold{(N)}\\rightarrow\\bold{(K, M, N)}\\times\\bold{(K, N, 1)}=\\bold{(K, M)}\n",
     "    >$$  \n",
     "\n",
     "    >以(N)*(K, N, M)为例  \n",
     "    >$$\n",
     "    >\\bold{(N)}\\times\\bold{(K, N, M)} \\\\\n",
     "    >\\bold{(N)}\\rightarrow\\bold{(K, 1, N)} \\\\\n",
-    "    >\\bold{(N)}\\times\\bold{(K, N, M)}\\rightarrow\\bold{(K, 1, N)}\\times\\bold{(K, N, M)}=\\bold{(K, 1, M)}\n",
+    "    >\\bold{(N)}\\times\\bold{(K, N, M)}\\rightarrow\\bold{(K, 1, N)}\\times\\bold{(K, N, M)}=\\bold{(K, M)}\n",
     "    >$$  "
    ]
   },
