--- a/Concise_Implementation_of_Linear_Regression.ipynb
+++ b/Concise_Implementation_of_Linear_Regression.ipynb
@@ -57,9 +57,15 @@
     ">   *  dataset(Dataset) - Map-style datasets or Iterable-style datasets.A map-style dataset is one that implements the __getitem__() and __len__() protocols, and represents a map from (possibly non-integral) indices/keys to data samples. An iterable-style dataset is an instance of a subclass of IterableDataset that implements the __iter__() protocol, and represents an iterable over data samples.  \n",
     ">   *  batch_size(int, optional) - 一个batch的样本数\n",
     ">   *  shuffle(bool, optional) - 随机打乱datasets的样本输出顺序\n",
-    ">   *  sampler(Sampler or Iterable, optional) - 定义dataset的样本输出顺序，每次输出一个样本，不能用shuffle同时使用\n",
-    ">   *  batch_sampler(Sampler or Iterable, optional)  - 定义dataset的样本输出顺序和batch_size，不能用batch_size、shuffle、sampler同时使用\n",
+    ">   *  sampler(Sampler or Iterable, optional) - 定义dataset的样本输出顺序，每次输出一个样本，不能与shuffle同时使用（For map-style datasets, the sampler is either provided by user or constructed based on the shuffle argument.）  \n",
+    ">   *  batch_sampler(Sampler or Iterable, optional)  - 定义dataset的样本输出顺序和batch_size，不能与batch_size、shuffle、sampler同时使用\n",
     ">   *  collate_fn(Callable, optional)  - 一个定义如何打包输出样本的函数，有默认值  \n",
+    ">```  \n",
+    "\n",
+    "`torch.utils.data.TensorDateset()`类详解：  \n",
+    ">```python\n",
+    "> def __init__(self, *tensors: Tensor) -> None: 输入是多个最高维度相同的，例如tensor1, tensor2, ..., tensorx  \n",
+    "> def __getitem__(self, index):  输出是tuple(tensor1[index], tensor2[index], ..., tensorx[index])  \n",
     ">```"
    ]
   },
