修改tensordateset类的用法详解

--- a/Concise_Implementation_of_Linear_Regression.ipynb
+++ b/Concise_Implementation_of_Linear_Regression.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "`torch.utils.data.TensorDateset()`类详解：  \n",
     ">```python\n",
-    "> def __init__(self, *tensors: Tensor) -> None: 输入是多个最高维度相同的，例如tensor1, tensor2, ..., tensorx  \n",
+    "> def __init__(self, *tensors: Tensor) -> None: 输入是多个最高维度相同的tensor，例如tensor1, tensor2, ..., tensorx  \n",
     "> def __getitem__(self, index):  输出是tuple(tensor1[index], tensor2[index], ..., tensorx[index])  \n",
     ">```"
    ]
