修正对backward的理解

--- a/Automatic_Differentiation.ipynb
+++ b/Automatic_Differentiation.ipynb
@@ -322,7 +322,7 @@
     "    ![gradient的详细解释](picture\\grad.jpg)  \n",
     "\n",
     "    \n",
-    "    `retain_graph`：通常在调用一次backward后，***pytorch会自动把计算图销毁，当计算图被销毁后，对调用backward()的该变量进行任何操作都不会再构建计算图，除非重新开始构建该变量***。要想对某个变量重复调用backward，则需要将该参数设置为True。  "
+    "    `retain_graph`：通常在调用一次backward后，***pytorch会自动把计算图销毁，当计算图被销毁后，对调用backward()的该变量进行任何操作都不会再影响构建它的leaf tensor了***。要想对某个变量重复调用backward，则需要将该参数设置为True。  "
    ]
   }
  ],
