--- a/Concise_Implementation_of_Softmax_Regression.ipynb
+++ b/Concise_Implementation_of_Softmax_Regression.ipynb
@@ -99,7 +99,7 @@
     "# nn.CrossEntropyLoss()的input和traget\n",
     "# input:单个样本(C)，批样本(batch_size, C)，高维批样本(batch_size, C, d1, d2,..., dk)\n",
     "# traget:类别索引or类别概率\n",
-    "# 类别索引：维度(batch_size)or(batch_size, d1, d2,..., dk)；值：[0, C)\n",
+    "# 类别索引：单个样本()，批样本(batch_size)，高维样本(batch_size, d1, d2,..., dk)；值：[0, C)\n",
     "# 类别概率:维度与input一致；值(0~1)\n",
     "loss = nn.CrossEntropyLoss(reduction='none')"
    ]
