--- a/Concise_Implementation_of_Recurrent_Neural_Networks.ipynb
+++ b/Concise_Implementation_of_Recurrent_Neural_Networks.ipynb
@@ -1101,19 +1101,19 @@
    "source": [
     "### 总结  \n",
     "\n",
-    "1.`nn.RNN()`输入数据维度\n",
+    "1.`nn.RNN().forward()`输入数据维度\n",
     "\n",
     "数据：时间步数$\\times$批量大小$\\times$特征数\n",
     "\n",
     "初始隐藏状态：隐藏层数$\\times$批量大小$\\times$隐藏神经元个数\n",
     "\n",
-    "2.`nn.RNN()`输出数据维度\n",
+    "2.`nn.RNN().forward()`输出数据维度\n",
     "\n",
     "数据：时间步数$\\times$批量大小$\\times$隐藏神经元个数，\n",
     "\n",
     "更新后的隐藏状态：隐藏层数$\\times$批量大小$\\times$隐藏神经元个数\n",
     "\n",
-    "3.`nn.RNN()`不包括线性层。考虑到数据集的标签排列，需要对`nn.RNN()`的输出结果进行变形，再输入线性层，例如（时间步数$\\times$批量大小，特征数）"
+    "3.`nn.RNN()`不包括线性层。考虑到数据集的标签排列，需要对`nn.RNN().forward()`的输出结果进行变形，再输入线性层，例如（时间步数$\\times$批量大小，特征数）"
    ]
   }
  ],
