--- a/Concise_Implementation_of_Recurrent_Neural_Networks.ipynb
+++ b/Concise_Implementation_of_Recurrent_Neural_Networks.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "torch.Size([1, 32, 256])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,16 +79,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([35, 32, 256]), torch.Size([1, 32, 256]))"
+       "(tensor([[ 0.2429,  0.1904, -0.1676,  ...,  0.0736,  0.2208, -0.1056],\n",
+       "         [ 0.1248,  0.1941, -0.1010,  ...,  0.1372,  0.0378, -0.0692],\n",
+       "         [ 0.1417,  0.2490, -0.1674,  ...,  0.2447,  0.1121, -0.1487],\n",
+       "         ...,\n",
+       "         [ 0.1093,  0.2798, -0.1947,  ...,  0.0566,  0.2205, -0.0224],\n",
+       "         [ 0.1349,  0.2686, -0.2050,  ...,  0.0754,  0.1850, -0.1664],\n",
+       "         [ 0.0430,  0.3146, -0.2258,  ...,  0.0196,  0.1528, -0.0973]],\n",
+       "        grad_fn=<SelectBackward0>),\n",
+       " tensor([[ 0.2429,  0.1904, -0.1676,  ...,  0.0736,  0.2208, -0.1056],\n",
+       "         [ 0.1248,  0.1941, -0.1010,  ...,  0.1372,  0.0378, -0.0692],\n",
+       "         [ 0.1417,  0.2490, -0.1674,  ...,  0.2447,  0.1121, -0.1487],\n",
+       "         ...,\n",
+       "         [ 0.1093,  0.2798, -0.1947,  ...,  0.0566,  0.2205, -0.0224],\n",
+       "         [ 0.1349,  0.2686, -0.2050,  ...,  0.0754,  0.1850, -0.1664],\n",
+       "         [ 0.0430,  0.3146, -0.2258,  ...,  0.0196,  0.1528, -0.0973]],\n",
+       "        grad_fn=<SelectBackward0>))"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +111,8 @@
    "source": [
     "X = torch.rand(size=(num_steps, batch_size, len(vocab)))\n",
     "Y, state_new = rnn_layer(X, state)\n",
-    "Y.shape, state_new.shape"
+    "Y.shape, state_new.shape\n",
+    "Y[-1],state_new[0]"
    ]
   },
   {
@@ -1109,9 +1125,11 @@
     "\n",
     "2.`nn.RNN().forward()`输出数据维度\n",
     "\n",
-    "数据：时间步数$\\times$批量大小$\\times$隐藏神经元个数，\n",
+    "数据：时间步数$\\times$批量大小$\\times$隐藏神经元个数\n",
     "\n",
     "更新后的隐藏状态：隐藏层数$\\times$批量大小$\\times$隐藏神经元个数\n",
+    "\n",
+    "**最后一个时间步的数据就是更新后的隐藏状态。**\n",
     "\n",
     "3.`nn.RNN()`不包括线性层。考虑到数据集的标签排列，需要对`nn.RNN().forward()`的输出结果进行变形，再输入线性层，例如（时间步数$\\times$批量大小，特征数）"
    ]
