--- a/Computer_Vision-Anchor_Boxes.ipynb
+++ b/Computer_Vision-Anchor_Boxes.ipynb
@@ -28006,7 +28006,93 @@
     "\n",
     "2. 训练集：图片具有真实边界框$\\text{(batch\\_size, num\\_boxes, 5=classes+4)}$，对图片进行锚框划分后（输入），为每个输入锚框分配真实边界框，进而得到训练集标签$\\text{(labels)}$：输出类别和偏移。 \n",
     "\n",
-    "3. 预测时：模型输出为：输出概率$\\text{(batch\\_size, num\\_boxes(calsses), num\\_anchors(pred))}$和输出偏移$\\text{(batch\\_size, num\\_anchors*4)}$，由输入锚框和输出偏移可以得到预测边界框$\\text{(batch\\_size, num\\_anchors, 4)}$，通过非极大值抑制使得同一张图片中过于相似的预测框被舍弃（其类别设为$-1$），得到最终的输出：$\\text{(batch\\_size, num\\_anchors, 6=class\\_id + conf + 4)}$，即每个输入锚框对应的预测边界框信息（类别，置信度，坐标）。"
+    "3. 预测时：模型输出为：输出概率$\\text{(batch\\_size, num\\_boxes(calsses), num\\_anchors(pred))}$和输出偏移$\\text{(batch\\_size, num\\_anchors*4)}$，由输入锚框和输出偏移可以得到预测边界框$\\text{(batch\\_size, num\\_anchors, 4)}$，通过非极大值抑制使得同一张图片中过于相似的预测框被舍弃（其类别设为$-1$），得到最终的输出：$\\text{(batch\\_size, num\\_anchors, 6=class\\_id + conf + 4)}$，即每个输入锚框对应的预测边界框信息（类别，置信度，坐标）。  \n",
+    "\n",
+    "1.`torch.meshgird(tensor1, tensor2, indexing='ij')`：  \n",
+    "假如`tensor1`和`tensor2`均为1维Tensor，则返回`new_tensor1`和`new_tensor2`，形状为$\\text{(tensor1.shape, tensor2.shape)}$。例：\n",
+    "```python\n",
+    "x = torch.tensor([1, 2, 3])\n",
+    "y = torch.tensor([4, 5, 6])\n",
+    "grid_x, grid_y = torch.meshgrid(x, y, indexing='ij')\n",
+    ">>> grid_x\n",
+    "tensor([[1, 1, 1],\n",
+    "        [2, 2, 2],\n",
+    "        [3, 3, 3]])\n",
+    ">>> grid_y\n",
+    "tensor([[4, 5, 6],\n",
+    "        [4, 5, 6],\n",
+    "        [4, 5, 6]])\n",
+    "```\n",
+    "\n",
+    "2.`torch.stack(list[tensor1,...,tensorn]|tuple(tensor1,...,tensorn), dim=x)`：  \n",
+    "在新维度`x`上堆叠Tensor，注意会产生新维度`x`。例如：  \n",
+    "$\\text{(m, n)}\\rightarrow\\text{(m, x, n)}$，维度`m`和`n`位置的移动不会改变该维度上数据变化。\n",
+    "\n",
+    "3.`torch.repeat(tensor, (x, y))`：   \n",
+    "将`tensor`整体重复`(x, y)`。例如：\n",
+    "```python\n",
+    "x = torch.tensor([1, 2, 3])\n",
+    "x.repeat(4, 2)\n",
+    ">>> tensor([[ 1,  2,  3,  1,  2,  3],\n",
+    "            [ 1,  2,  3,  1,  2,  3],\n",
+    "            [ 1,  2,  3,  1,  2,  3],\n",
+    "            [ 1,  2,  3,  1,  2,  3]])\n",
+    "```\n",
+    "4.`torch.repeat_interleave(tensor, repeats=n, dim=x)`：  \n",
+    "将`tensor`的每个元素在维度`x`上重复`n`次。例如：\n",
+    "```python\n",
+    "y = torch.tensor([[1, 2], [3, 4]])\n",
+    "torch.repeat_interleave(y, 2)\n",
+    ">>> tensor([1, 1, 2, 2, 3, 3, 4, 4])\n",
+    "torch.repeat_interleave(y, 3, dim=1)\n",
+    ">>> tensor([[1, 1, 1, 2, 2, 2],\n",
+    "            [3, 3, 3, 4, 4, 4]])\n",
+    "torch.repeat_interleave(y, 2, dim=0)\n",
+    ">>> tensor([[1, 2], \n",
+    "            [1, 2], \n",
+    "            [3, 4], \n",
+    "            [3, 4]])\n",
+    "```\n",
+    "\n",
+    "5.`torch.squeeze(tensor, dim=x)`：   \n",
+    "如果`tensor`的`x`维度上为$1$，则删除`x`维度。  \n",
+    "\n",
+    "6.`torch.nonzero(tensor, as_tuple=False)`：  \n",
+    "返回一个二维Tensor，每一行是非零元素的的坐标。例如：\n",
+    "```python\n",
+    "torch.nonzero(torch.tensor([1, 1, 1, 0, 1]))\n",
+    ">>> tensor([[ 0],\n",
+    "            [ 1],\n",
+    "            [ 2],\n",
+    "            [ 4]])\n",
+    "torch.nonzero(torch.tensor([[0.6, 0.0, 0.0, 0.0],\n",
+    "                            [0.0, 0.4, 0.0, 0.0],\n",
+    "                            [0.0, 0.0, 1.2, 0.0],\n",
+    "                            [0.0, 0.0, 0.0,-0.4]]))\n",
+    ">>> tensor([[ 0,  0],\n",
+    "            [ 1,  1],\n",
+    "            [ 2,  2],\n",
+    "            [ 3,  3]])\n",
+    "```\n",
+    "\n",
+    "7.`torch.clamp(tensor, min=x, max=y)`：  \n",
+    "将`tensor`中的所有元素限制到$\\text{[x, y]}$，如果`min`为`None`，则没有下界。如果`max`为`None`，则没有上界。例如：\n",
+    "```python\n",
+    "a = torch.randn(4)\n",
+    "a\n",
+    ">>> tensor([-1.7120,  0.1734, -0.0478, -0.0922])\n",
+    "torch.clamp(a, min=-0.5, max=0.5)\n",
+    ">>> tensor([-0.5000,  0.1734, -0.0478, -0.0922])\n",
+    "```\n",
+    "\n",
+    "8.`torch.maximum(tensor1, tensor2)`：  \n",
+    "计算`tensor1`和`tensor2`的逐元素最大值。例如：  \n",
+    "```python\n",
+    "a = torch.tensor((1, 2, -1))\n",
+    "b = torch.tensor((3, 0, 4))\n",
+    "torch.maximum(a, b)\n",
+    ">>> tensor([3, 2, 4])\n",
+    "```"
    ]
   },
   {
